k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-tracker-api
  namespace: task-tracker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-tracker-api
  template:
    metadata:
      labels:
        app: task-tracker-api
    spec:
      containers:
        - name: api
          image: ghcr.io/thimiraw3/task-tracker-api:latest
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 15
