k8s/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-tracker-ingress
  namespace: task-tracker
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: task-tracker.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: task-tracker-api
                port:
                  number: 80
